# cubed3

./: .gitignore  Anchor.toml  README.md  init_cluster.sh  package.json
app/: bait.js  package.json  tailwind.config.js  tsconfig.json
app/src/: textures.ts
app/src/global_api/: helpers.ts  mutations.ts  queries.ts
app/src/global_architecture/cube_model/: cube_model.ts
app/src/global_building_blocks/bottom_bar/: bottom_bar.tsx
app/src/global_building_blocks/cube/: cube.tsx
app/src/global_building_blocks/cube_background/: cube_background.tsx
app/src/global_building_blocks/cube_tapestry/: cube_tapestry.tsx
app/src/global_building_blocks/modal/: model.tsx
app/src/global_chain/: chain_constants.ts  chain_methods.ts  chain_utils.ts
app/src/global_constants/: cube_dimensions.ts
app/src/global_idl/: idl.json
app/src/global_networking/: constants.ts  index.ts
app/src/global_types/: cubed.ts
app/src/global_utils/: device_utils.ts  number_utils.ts  react.ts  screen.ts  tapestry_utils.ts
app/src/lib/: landing_styles.ts
app/src/pages/: _app.tsx  index.tsx
app/src/scripts/: get_idl.sh
app/src/styles/: globals.css
programs/cubed/: Anchor.toml  Cargo.toml
programs/cubed/src/: lib.rs
programs/cubed/src/utils/: mod.rs
server/: .gitignore  nodemon.json  package.json  test.js  tsconfig.json
server/src/: app.ts  index.ts
server/src/handlers/: buy_canvas.ts  delete_everything.ts  finish_mosaic.ts  get_canvases.ts  marketplace.ts  update_canvas.ts
server/src/models/: index.ts  menu.ts
server/src/routes/: index.ts
tests/: cubed.ts  help.js
(+60 files in other folders)
